# SentinelForge

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  TASKS.md
.github/workflows/: ci.yml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: a9b6ce70a405_initial_schema.py
apps/api/sentinelforge/: __init__.py  main.py
apps/api/sentinelforge/api/routes/: auth.py  rules.py  users.py
apps/api/sentinelforge/core/: __init__.py  config.py  db.py  deps.py  rate_limit.py  security.py
apps/api/sentinelforge/data/: attack_enterprise.json
apps/api/sentinelforge/models/: __init__.py  attack.py  audit.py  enums.py  event.py  incident.py  rule.py  user.py
apps/api/sentinelforge/schemas/: __init__.py  auth.py  common.py  rule.py
apps/api/sentinelforge/seed/: __init__.py
apps/api/sentinelforge/services/: attack.py  audit.py  auth.py  importer.py  quality.py  rules.py  sigma_service.py
apps/api/tests/: conftest.py  test_auth.py  test_rules.py  test_sigma_service.py
docs/: database.md  threat-model.md
scripts/: refresh_attack.py
