[project]
name = "sentinelforge"
version = "1.0.0"
description = "Detection-engineering and incident-replay platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi==0.139.2",
    "uvicorn[standard]==0.51.0",
    "sqlalchemy==2.0.51",
    "alembic==1.18.5",
    "pydantic[email]==2.13.4",
    "pydantic-settings==2.14.2",
    "psycopg[binary]==3.3.4",
    "bcrypt==5.0.0",
    "pyjwt==2.13.0",
    "python-multipart==0.0.32",
    "pyyaml==6.0.3",
    "pysigma==1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
    "ruff==0.15.22",
    "mypy==2.3.0",
    "types-PyYAML==6.0.12.20250915",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sentinelforge*"]

[tool.setuptools.package-data]
sentinelforge = ["data/*.json", "seed/rules/*.yml", "seed/datasets/*.jsonl"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "S",    # bandit — security
    "C4",   # comprehensions
    "SIM",  # simplify
    "RUF",
]
ignore = [
    "B008",  # FastAPI Depends() in defaults is the framework idiom
    "S101",  # assert is expected in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106", "S108"]  # hard-coded test credentials are intentional
"sentinelforge/seed/*" = ["S105", "S106"]  # documented local-only demo credentials

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
exclude = ["^alembic/"]

[[tool.mypy.overrides]]
module = ["sigma.*"]
follow_untyped_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error::DeprecationWarning:sentinelforge.*"]
